--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,6 +40,6 @@ en:
         user:
           attributes:
             password:
-              too_short: "is holy super short (minimum is %{count} characters)"
+              too_short: "is too short (minimum is %{count} characters)"
             confirmation_token:
               invalid: "is invalid. Please check your email."
