--- a/config/locales/custom.en.yml
+++ b/config/locales/custom.en.yml
@@ -14,4 +14,5 @@ en:
       users:
         update_profile: ""
         update_password: ""
+        update_avatar: ""
         wrong_current_password: "Your current password is wrong"
